overflow, bug on delete scenes, bug when show the date format

--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,8 @@ body, html {
 }
 
 #ThreeJS, #ThreeJSPanels, #ThreeJSDashboard {
-  /*overflow-x: hidden;
-  overflow-y: hidden;*/
+  overflow-x: hidden;
+  overflow-y: hidden;
   box-sizing: border-box;
   padding-left: 0px;
   padding-right: 0px;
